[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
license = ""
name = "share"
repository = ""
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["server", "ipc", "utils"]

[workspace.dependencies]
lazy_static = "1.4.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "1.2", features = ["api-all"] }

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
ipc = {path = "./ipc"}
lazy_static = "1.4.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
server = {path = "./server"}
tauri = {version = "1.2", features = [ "dialog-message", "process-relaunch", "process-exit", "shell-open"] }
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
