[package]
edition = "2021"
name = "command"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.5.6"
serde = {workspace = true}
serde_json = {workspace = true}
tauri = {workspace = true}
utils = { version = "0.1.0", path = "../utils" }
