[package]
edition = "2021"
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.12", features = ["multipart", "headers"]}
futures = "0.3.28"
hyper = {version = "0.14.27", features = ["full"]}
reqwest = "0.11.16"
tokio = {version = "1.26.0", features = ["full"]}
tokio-util = {version = "0.7", features = ["io"]}
tower = {version = "0.4", features = ["util"]}
tower-http = {version = "0.4.0", features = ["fs", "trace", "cors"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
local-ip-address = "0.5.3"
lazy_static = "1.4.0"
dirs = "5.0.0"
