[package]
edition = "2021"
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.12", features = ["multipart", "headers"]}
dirs = "5.0.0"
futures = "0.3.28"
hyper = {version = "0.14.27", features = ["full"]}
lazy_static = {workspace = true}
local-ip-address = "0.5.3"
reqwest = "0.11.16"
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {version = "1.26.0", features = ["full"]}
tokio-util = {version = "0.7", features = ["io"]}
tower = {version = "0.4", features = ["util"]}
tower-http = {version = "0.4.0", features = ["fs", "trace", "cors"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
utils = {path = "../utils"}
